samples/_failures_safe/1761429646_66e54a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd4f0af6.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_bd4f0af6.c:183: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_bd4f0af6.c:182:5: error: expected declaration or statement at end of input
  182 |     for
      |     ^~~
